--- a/work.html
+++ b/work.html
@@ -102,7 +102,7 @@
         </figure>
          <a href="/html/food_sql.html" target="_blank">
            <div class="card">
-             <h2><span><i></i></span> [Open Workbook] <br>You are what you eat - tracking my diet in December with SQL and MyFitnessPal</h2>
+             <h2><span><i></i></span> [Open Workbook] <br>You are what you eat - tracking my diet in December  --  and losing weight along the way -- with SQL and MyFitnessPal</h2>
              <img src="/img/healthy-food.jpeg"alt="stocks">
            </div>
          </a> 
