--- a/project2.html
+++ b/project2.html
@@ -126,12 +126,34 @@
   </ul>
 
   <h3>Cleaning individual columns</h3>
+  <p>Working with</p>
   <figure>
     <img src="/img/host_response_time.png" srcset=""alt="host-response-time">
   </figure>
   <figure>
+    <img src="/img/host_response_time_plot.png" srcset=""alt="host-response-time-plot">
+  </figure>
+  <p>Observations:</p>
+  <figure>
     <img src="/img/host_response_rate.png" srcset=""alt="host-response-rate">
   </figure>
+  <figure>
+    <img src="/img/host_response_bins.png" srcset=""alt="host-response-bins">
+  </figure>
+  <figure>
+    <img src="/img/host_response_rate_plot.png" srcset=""alt="host-response-rate-plot">
+  </figure>
+  <p>Observations:</p>
+  <figure>
+    <img src="/img/property_type.png" srcset=""alt="property-type">
+  </figure>
+  <figure>
+    <img src="/img/property_type_replace.png" srcset=""alt="property-type-replace">
+  </figure>
+  <figure>
+    <img src="/img/property_type_plot.png" srcset=""alt="property-type-plot">
+  </figure>
+  <p>Observations:</p>
   <figure>
     <img src="/img/break5.png" srcset=""alt="break">
   </figure>
