--- a/food_sql.html
+++ b/food_sql.html
@@ -57,7 +57,7 @@
     <h1>My post-Turkey day taper</h1>  
     <h3>Tracking calories and shedding pounds with the help of MySQL</h3>
     <p>December 31, 2021</p>
-    <p>I stepped on the scale a few days after Thanksgiving and saw a number I really did not like, so in order to improve my diet I used the nutrition app MyFitnessPal and MySQL to create a database to track all the meals I ate in the month of December. I also tracked all my exercise and weighed myself each day. <br> 
+    <p>I stepped on the scale a few days after Thanksgiving and saw a number I really did not like (if there was a betting line, take the over). So in order to improve my diet I used the nutrition app MyFitnessPal and MySQL to create a database to track all the meals I ate in the month of December. I also tracked all my exercise and weighed myself each day. <br> 
     <br>
     To start my journey to becoming healthier, and as a believer in science, first I consulted some nutrition calculators online for a desired daily calorie and nutrient goal. Ultimately, to reach my desired weight loss target of 30 lbs, I need to consume a total of 1,910 (net) calories per day, with my "macro" targets in a split of 50% carbohydrates (translates to 239 g), 30% fat (64 g), and 20% protein (96g).</p>
     <figure>
@@ -67,7 +67,7 @@
       <img src="/img/micros.png" srcset=""alt="micros">
     </figure>
     <br>  
-    <p>For exercise, my target was to burn 1,890 calories throguh either 4 workouts per week or 4 hours of exercise total. My targets for micro-nutrientss included: 21g saturated fat, 300 mg cholestorel, 2300 mg sodium, 3500 mg potassium, 38 g of fiber, 72g sugar, and 100% sugggested daily value consumption of Vitamin A, Vitamin C, calcium, and iron. </p>
+    <p>For exercise, my target was to burn 1,890 calories throguh either 4 workouts per week or 4 hours of exercise total. My targets for micro-nutrients included: 21g saturated fat, 300 mg cholestorel, 2300 mg sodium, 3500 mg potassium, 38 g of fiber, 72g sugar, and 100% sugggested daily value consumption of Vitamin A, Vitamin C, calcium, and iron. </p>
     <figure>
       <img src="/img/create_table.png" srcset=""alt="create-table">
       <figcaption>Creating the database and the first table</figcaption>
