--- a/todo.html
+++ b/todo.html
@@ -68,6 +68,7 @@
                 <li>SQL</li>
             </ul>
         <li>Airbnb</li>
+        <li>update resume</li>
     </ul>
 
     <footer>
