--- a/project1.html
+++ b/project1.html
@@ -49,7 +49,7 @@
       <a href="/html/index.html" id="branding">Brendan</a>
       <a href="/html/about.html">About</a>
       <a href="/html/mystory.html">My Story</a> 
-      <a href="/html/work.html">Work</a> 
+      <a href="/html/work.html"class="active" >Work</a> 
       <a href="/html/fun.html">When Not Working</a>  
     </nav>
     <br>
