--- a/project2.html
+++ b/project2.html
@@ -49,7 +49,7 @@
       <a href="/html/index.html" id="branding">Brendan</a>
       <a href="/html/about.html" >About</a>
       <a href="/html/mystory.html">My Story</a> 
-      <a href="/html/work.html">Work</a> 
+      <a href="/html/work.html"class="active" >Work</a> 
       <a href="/html/fun.html">When Not Working</a>  
     </nav>
  
@@ -57,7 +57,7 @@
     <h2>Intro</h2>
     <p>“If you are lucky enough to have lived in Paris as a young man, then wherever you go for the rest of your life, it stays with you, for Paris is a moveable feast.” This was true for Ernest Hemingway, and it is certainly true for me. I studied abroad in Paris from February to June 2009 and it was a seminal point in my life - I fell in love with the city and the culture and grew tremendously as a person. I do agree with Audrey Hepburn that 'Paris est toujours une bonne idée' (Paris is always a good idea). Since my study abroad tour de force in 2009, I have been back to the city I love several times, each time staying in a different neighborhood to experience the city from a different perspective. </p>
     <h2>Objective: Find the best Airbnb in Paris:</h2>
-    <p>I have always been fascinated by airbnb. This project aims to use pandas and machine learning to explore Airbnb listing data, in order to find the top 5 Airbnb properties in Paris. </p>
+    <p>I have always been fascinated by airbnb. This project aims to use pandas and machine learning to explore Airbnb listing data, in order to find the top 5 Airbnb properties in Paris. The strategy needs to evolve around exploring the data, running regressions to figure out the importance of each variable in determnining price - and then filter based on conditions to find those units that are undervalued. </p>
     <figure>
       <img src="/img/break5.png" srcset=""alt="break">
     </figure>
@@ -155,11 +155,56 @@
   </figure>
   <p>Observations:</p>
   <figure>
+    <img src="/img/amenities.png" srcset=""alt="amenities">
+  </figure>
+  <p>Observations:</p>
+  <figure>
+    <img src="/img/amenities_drop.png" srcset=""alt="amenities-drop">
+  </figure>
+  <p>Observations:</p>
+  <figure>
+    <img src="/img/price_airbnb.png" srcset=""alt="price-airbnb">
+  </figure>
+  <p>Observations:</p>
+  <figure>
     <img src="/img/break5.png" srcset=""alt="break">
   </figure>
   <h1>Exploratory data analysis</h1>
+  <figure>
+    <img src="/img/airbnb_first_host_date.png" srcset=""alt="airbnb-first-host-date">
+  </figure>
+  <p>Observations:</p>
+
   <h4>Time Series</h4>
+  <figure>
+    <img src="/img/airbnb_timeseries1.png" srcset=""alt="airbnb-time-series-1">
+  </figure>
+  <p>Observations:</p>
+  <figure>
+    <img src="/img/airbnb_time_series2.png" srcset=""alt="airbnb-time-series-2">
+  </figure>
+  <figure>
+    <img src="/img/airbnb_price_yoy.png" srcset=""alt="airbnb-price-yoy">
+  </figure>
+  <figure>
+    <img src="/img/airbnb_price_sheet.png" srcset=""alt="airbnb-price-sheet">
+  </figure>
+  
+
   <h4>Numerical features</h4>
+  <figure>
+    <img src="/img/airbnb_describe.png" srcset=""alt="airbnb-describe">
+  </figure>
+  <figure>
+    <img src="/img/airbnb_price_distribution.png" srcset=""alt="airbnb-distribution">
+  </figure>
+  <figure>
+    <img src="/img/airbnb_price_distribution2.png" srcset=""alt="airbnb-distribution2">
+  </figure>
+  <figure>
+    <img src="/img/airbnb_price_accommodations.png" srcset=""alt="airbnb-price_accommodations">
+  </figure>
+  
   <h4>Categorical features</h4>
   <h4>Boolean features</h4>
   <figure>
