--- a/project3.html
+++ b/project3.html
@@ -49,7 +49,7 @@
       <a href="/html/index.html" id="branding">Brendan</a>
       <a href="/html/about.html" >About</a>
       <a href="/html/mystory.html">My Story</a> 
-      <a href="/html/work.html">Work</a> 
+      <a href="/html/work.html"class="active" >Work</a> 
       <a href="/html/fun.html">When Not Working</a>  
     </nav>
     <h2>Rebounds and Rings: Thoughts and observations (a rant?) from 20 years as an NBA fanatic - with assistance from BeautifulSoup, Pandas, MatplotLib and Altair</h2>
