--- a/work.html
+++ b/work.html
@@ -74,7 +74,7 @@
         <figure>
           <img src="/img/break5.png" srcset=""alt="break">
       </figure>
-        <a href="/html/project2.html" target="_blank">
+        <a href="/html/airbnb.html" target="_blank">
           <div class="card">
             <h2><span><i></i></span> [Open Workbook] <br> Where are the top 5 best airbnbs to stay in Paris {:answer}</h2>
             <img src="/img/paris_airbnb3.png"alt="paris-airbnb">
