--- a/airbnb.html
+++ b/airbnb.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>  
   <head>
@@ -44,6 +43,7 @@
   </head>
   
   <body>
+   <div class="container">
     <nav>
       <a href="/html/index.html" id="branding">Brendan</a>
       <a href="/html/about.html" >About</a>
@@ -65,7 +65,7 @@
    <h2>The dataset</h2>
    <p>The datset used for this project comes from <a href="http://insideairbnb.com/get-the-data.html" >Insideairbnb.com</a>, which is actually an anti-Airbnb lobbying group that scrapes listings, reviews and calendar data for multiple cities around the world. The dataset that I used from the site was scraped on September 30, 2021.</p>
    <br>
-  <figure>
+   <figure>
     <img src="/img/airbnb_python.png" srcset=""alt="airbnb-python">
     <figcaption>Getting the data</figcaption>
   </figure>
@@ -214,9 +214,6 @@
   <figure>
     <img src="/img/airbnb_feature_correlation.png" srcset=""alt="airbnb-coffee-correlation-code">
   </figure>
-  
- 
-
   <h4>Boolean features</h4>
   <figure>
     <img src="/img/airbnb_coffee_nachine_correlation_code.png" srcset=""alt="airbnb-coffee-machine-correlation">
@@ -224,7 +221,6 @@
   <figure>
     <img src="/img/airbnb_coffee_correlation.png" srcset=""alt="airbnb-coffee-correlation">
   </figure>
-  
   <figure>
     <img src="/img/break5.png" srcset=""alt="break">
   </figure>
@@ -249,7 +245,8 @@
       <p>Made by BME, ©2021</p>
     </footer>
     
-
+   </div>
+   
     <script src="/js/script.js"></script>
   </body>
   
