--- a/html/work.html
+++ b/html/work.html
@@ -74,10 +74,10 @@
         <figure>
           <img src="/img/break5.png" srcset=""alt="break">
       </figure>
-        <a href="/html/airbnb.html" target="_blank">
+        <a href="/html/airbnb/airbnb.html" target="_blank">
           <div class="card">
-            <h2><span><i></i></span> [Open Workbook] <br> Where are the top 5 best airbnbs to stay in Paris {:answer}</h2>
-            <img src="/img/paris_airbnb3.png"alt="paris-airbnb">
+            <h2><span><i></i></span> [Open Workbook] <br> Where are the 5 best airbnbs to stay in Paris? Which are the most mispriced? What are the 5 best, and most mispriced units across all EU-27 countries on the platform? </h2>
+            <img src="/img/paris_airbnb3.PNG"alt="paris-airbnb">
           </div>
         </a> 
         <figure>
