--- a/html/airbnb/venice.html
+++ b/html/airbnb/venice.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>  
   <head>
-    <title>Airbnb analysis - Rome</title>
+    <title>Airbnb analysis - Venice</title>
     <meta charset="utf-8">
     <meta name="keywords" content>
     <meta name="author" content="Brendan Erhard">
@@ -55,25 +55,25 @@
     
     <p></p>
     <figure>
-        <img src="/img/airbnb_rome_map.png" srcset=""alt="airbnb-rome-map">
+        <img src="/img/airbnb_venice_map.png" srcset=""alt="airbnb-venice-map">
     </figure>
     <p></p>
     <figure>
-        <img src="/img/airbnb_rome_summary.png" srcset=""alt="airbnb-rome-summary">
+        <img src="/img/airbnb_venice_summary.png" srcset=""alt="airbnb-venice-summary">
     </figure>
     <p></p>
     <figure>
-        <img src="/img/airbnb_rome_multiple_regression.png" srcset=""alt="airbnb-rome-multi-regression">
+        <img src="/img/airbnb_venice_multiple_regression.png" srcset=""alt="airbnb-venice-multi-regression">
     </figure>
     <p></p>
     <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
     <figure>
-      <img src="/img/airbnb_rome_mispriced.png" srcset=""alt="airbnb-rome-mispriced">
+      <img src="/img/airbnb_venice_mispriced.png" srcset=""alt="airbnb-venice-mispriced">
     <p></p>
     </figure>
     <h2>Highest Predicted Value</h2>
     <figure>
-      <img src="/img/airbnb_rome_best_score.png" srcset=""alt="airbnb-rome-best-score">
+      <img src="/img/airbnb_venice_best_score.png" srcset=""alt="airbnb-venice-best-score">
     </figure>
     
     <footer>
