--- a/html/todo.html
+++ b/html/todo.html
@@ -68,6 +68,13 @@
                 <li>SQL</li>
             </ul>
         <li>Airbnb</li>
+          <ul>
+            <li>Identify top 5 for all cities</li>
+            <li>save each city file as dataframe, then cmbine all dataframes and run regresion for europe</li>
+            <li>finetune the regressions, and have separat outocesm for 4 or less, etc</li>
+            <li>finish writeup for paris</li>
+            <li>find the perceieved amrket value of all stays by city, if assuming a 100% utilization rate, then graph as area plot</li>
+          </ul>
         <li>update resume</li>
     </ul>
 
