--- a/html/airbnb/amsterdam.html
+++ b/html/airbnb/amsterdam.html
@@ -66,14 +66,34 @@
         <img src="/img/airbnb_amsterdam_multiple_regression.png" srcset=""alt="airbnb-amsterdam-multi-regression">
     </figure>
     <p></p>
-    <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
     <figure>
-      <img src="/img/airbnb_amsterdam_mispriced.png" srcset=""alt="airbnb-amsterdam-mispriced">
+      <img src="/img/amsterdam_neighborhood_boxplot.png" srcset=""alt="amsterdam-boxplot">
+    </figure>
+    <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
+    <ul>
+      <li><a href="https://www.airbnb.com/rooms/8920212" >Beautiful spacey house at the Amstel near station</a></li>
+      <li><a href="https://www.airbnb.com/rooms/8006682" >Gorgeous Amsterdam Vondelpark house</a></li>
+      <li><a href="https://www.airbnb.com/rooms/14348158" >Industrial loft on edge Jordaan/Prinseneiland</a></li>
+      <li><a href="https://www.airbnb.com/rooms/1038120	" >Big trendy family loft in city center Amsterdam</a></li>
+      <li><a href="https://www.airbnb.com/rooms/916850" >Urban Villa, bright and spacious!</a></li>
+    </ul>
+    <p></p>
+    
+    <figure>
+      <img src="/img/airbnb_amsterdam_top_deal.png" srcset=""alt="airbnb-amsterdam-top-deals">
     <p></p>
     </figure>
-    <h2>Highest Rated Overall</h2>
+    <h2>Highest Ranked Units, based on multi-regression output</h2>
+    <ul>
+      <li><a href="https://www.airbnb.com/rooms/1402541" >Room with canal view in windmill area + free bikes</a></li>
+      <li><a href="https://www.airbnb.com/rooms/30461243" >Comfortable deluxe room, Amsterdams best</a></li>
+      <li><a href="https://www.airbnb.com/rooms/9402905" >Cosy & light apartment eastside</a></li>
+      <li><a href="https://www.airbnb.com/rooms/9327973" >Lovely home in central south Amsterdam</a></li>
+      <li><a href="https://www.airbnb.com/rooms/39168555" >Cool and Spaceous Quiet Canal Apartment</a></li>
+    </ul>
+    <p></p>
     <figure>
-      <img src="/img/airbnb_amsterdam_best_score.png" srcset=""alt="airbnb-amsterdam-best-score">
+      <img src="/img/airbnb_amsterdam_top_5.png" srcset=""alt="airbnb-rome-top-5">
     </figure>
 
     
