--- a/html/airbnb/antwerp.html
+++ b/html/airbnb/antwerp.html
@@ -66,15 +66,36 @@
         <img src="/img/airbnb_antwerp_multiple_regression.png" srcset=""alt="airbnb-antwerp-multi-regression">
     </figure>
     <p></p>
-    <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
     <figure>
-      <img src="/img/airbnb_antwerp_mispriced.png" srcset=""alt="airbnb-antwerp-mispriced">
+      <img src="/img/antwerp_neighborhood_boxplot.png" srcset=""alt="antwerp-boxplot">
+    </figure>
+    <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
+    <ul>
+      <li><a href="https://www.airbnb.com/rooms/5417459	" >Full house with garden, near by tram</a></li>
+      <li><a href="https://www.airbnb.com/rooms/10015096" >2 slpk appartement op toplocatie</a></li>
+      <li><a href="https://www.airbnb.com/rooms/22134240" >Fresh, modern and spacious 2 bedroom apartment</a></li>
+      <li><a href="https://www.airbnb.com/rooms/49833357" >Lovely studio close to all the hotspots in town</a></li>
+      <li><a href="https://www.airbnb.com/rooms/17446691" >Charlie's Smile Place</a></li>
+    </ul>
+    <p></p>
+    
+    <figure>
+      <img src="/img/airbnb_amsterdam_top_deal.png" srcset=""alt="airbnb-antwerp-top-deals">
     <p></p>
     </figure>
-    <h2>Highest Predicted Value</h2>
+    <h2>Highest Ranked Units, based on multi-regression output</h2>
+    <ul>
+      <li><a href="https://www.airbnb.com/rooms/23521144	" >Duchess</a></li>
+      <li><a href="	https://www.airbnb.com/rooms/28778081" >Light and spacious mansion Antwerp-South</a></li>
+      <li><a href="https://www.airbnb.com/rooms/26592318" >Luxurious Condo in Antwerp</a></li>
+      <li><a href="https://www.airbnb.com/rooms/36031281" >The Pink Pigeon</a></li>
+      <li><a href="https://www.airbnb.com/rooms/28363835	" >2 BDR KING BED DUPLEX UNIQUE VIEWS</a></li>
+    </ul>
+    <p></p>
     <figure>
-      <img src="/img/airbnb_antwerp_best_score.png" srcset=""alt="airbnb-antwerp-best-score">
+      <img src="/img/airbnb_amsterdam_top_5.png" srcset=""alt="airbnb-antwerp-top-5">
     </figure>
+
 
     
 
