--- a/html/airbnb/athens.html
+++ b/html/airbnb/athens.html
@@ -59,22 +59,43 @@
     </figure>
     <p></p>
     <figure>
-        <img src="/img/airbnb_athens_summary.png" srcset=""alt="airbnb-athens-summary">
+        <img src="/img/airbnb_athens_summary2.png" srcset=""alt="airbnb-athens-summary">
     </figure>
     <p></p>
     <figure>
         <img src="/img/airbnb_athens_multiple_regression.png" srcset=""alt="airbnb-athens-multi-regression">
     </figure>
     <p></p>
-    <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
     <figure>
-      <img src="/img/airbnb_athens_mispriced.png" srcset=""alt="airbnb-athens-mispriced">
+      <img src="/img/athens_neighborhood_boxplot.png" srcset=""alt="athens-boxplot">
+    </figure>
+    <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
+    <ul>
+      <li><a href="https://www.airbnb.com/rooms/9656826	" >Mediterranian light near Acropolis!</a></li>
+      <li><a href="https://www.airbnb.com/rooms/24951180" >Lemon House</a></li>
+      <li><a href="https://www.airbnb.com/rooms/6049558" >CENTRAL SPACIOUS, BRIGHT FLAT next to Evangelismos</a></li>
+      <li><a href="https://www.airbnb.com/rooms/35544516" >Minimal Apartment in Athens</a></li>
+      <li><a href="https://www.airbnb.com/rooms/6496940	" >City center - staps to Akropoli</a></li>
+    </ul>
+    <p></p>
+    
+    <figure>
+      <img src="/img/airbnb_amsterdam_top_deal.png" srcset=""alt="airbnb-athens-top-deals">
     <p></p>
     </figure>
-    <h2>Highest Predicted Value</h2>
+    <h2>Highest Ranked Units, based on multi-regression output</h2>
+    <ul>
+      <li><a href="https://www.airbnb.com/rooms/43577048" >Amazing Exarcheia View</a></li>
+      <li><a href="https://www.airbnb.com/rooms/14132118" >Acropolis Traditional Apartment</a></li>
+      <li><a href="https://www.airbnb.com/rooms/36252670" >The Gem of Filopappou 1, member of Luxury Drops</a></li>
+      <li><a href="https://www.airbnb.com/rooms/28269479" >Modern & luxury 4th floor apartment near downtown</a></li>
+      <li><a href="https://www.airbnb.com/rooms/3704577	" >Breathtaking Acropolis Penthouse</a></li>
+    </ul>
+    <p></p>
     <figure>
-      <img src="/img/airbnb_athens_best_score.png" srcset=""alt="airbnb-athens-best-score">
+      <img src="/img/airbnb_amsterdam_top_5.png" srcset=""alt="airbnb-athens-top-5">
     </figure>
+
 
 
     
