--- a/html/airbnb/barcelona.html
+++ b/html/airbnb/barcelona.html
@@ -66,14 +66,34 @@
         <img src="/img/airbnb_barcelona_multiple_regression.png" srcset=""alt="airbnb-barcelona-multi-regression">
     </figure>
     <p></p>
-    <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
     <figure>
-      <img src="/img/airbnb_barcelona_mispriced.png" srcset=""alt="airbnb-barcelona-mispriced">
+      <img src="/img/barcelona_neighborhood_boxplot.png" srcset=""alt="barcelona-boxplot">
+    </figure>
+    <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
+    <ul>
+      <li><a href="https://www.airbnb.com/rooms/11938945" >Piso Eixample con terraza y parking</a></li>
+      <li><a href="https://www.airbnb.com/rooms/16968205" >BORN 2 ROOMS 4 PAX</a></li>
+      <li><a href="https://www.airbnb.com/rooms/567962" >SUN AND SKY TERRACE-LOFT APART</a></li>
+      <li><a href="https://www.airbnb.com/rooms/31257984" >Modern, bright and spacious apartment in Gràcia</a></li>
+      <li><a href="https://www.airbnb.com/rooms/42074375" >Room Loft 5***** Rambla/Liceu Not Shared 100m2</a></li>
+    </ul>
+    <p></p>
+    
+    <figure>
+      <img src="/img/airbnb_barcelona_top_deal.png" srcset=""alt="airbnb-barcelona-top-deals">
     <p></p>
     </figure>
-    <h2>Highest Predicted Value</h2>
+    <h2>Highest Ranked Units, based on multi-regression output</h2>
+    <ul>
+      <li><a href="https://www.airbnb.com/rooms/9656826	" >Mediterranian light near Acropolis!</a></li>
+      <li><a href="https://www.airbnb.com/rooms/1206052" >Sagrada Familia - Nice apartment</a></li>
+      <li><a href="https://www.airbnb.com/rooms/16292600" >BCN Luxury</a></li>
+      <li><a href="https://www.airbnb.com/rooms/16668153" >7 MINUTES FROM LAS RAMBLAS LUXURY 3 BEDROOMS FLAT!</a></li>
+      <li><a href="https://www.airbnb.com/rooms/34134281" >Be Mate Paseo de Gracia Executive</a></li>
+    </ul>
+    <p></p>
     <figure>
-      <img src="/img/airbnb_barcelona_best_score.png" srcset=""alt="airbnb-barcelona-best-score">
+      <img src="/img/airbnb_barcelona_top_5.png" srcset=""alt="airbnb-barcelona-top-5">
     </figure>
 
 
