--- a/html/airbnb/florence.html
+++ b/html/airbnb/florence.html
@@ -67,13 +67,30 @@
     </figure>
     <p></p>
     <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
+    <ul>
+      <li><a href="https://www.airbnb.com/rooms/10433602" >Santa Rosa Apartment - 3 bedrooms - MAGIC VIEW</a></li>
+      <li><a href="https://www.airbnb.com/rooms/19342275" >Portinari Apartment</a></li>
+      <li><a href="https://www.airbnb.com/rooms/10433602" >Small condominium apartment</a></li>
+      <li><a href="https://www.airbnb.com/rooms/2466251" >Beautiful Apartment in Florence</a></li>
+      <li><a href="https://www.airbnb.com/rooms/12941888" >Cavour Apartment</a></li>
+    </ul>
+    <p></p>
+    
     <figure>
-      <img src="/img/airbnb_florence_mispriced.png" srcset=""alt="airbnb-florence-mispriced">
+      <img src="/img/airbnb_florence_top_deal.png" srcset=""alt="airbnb-florence-top-deals">
     <p></p>
     </figure>
-    <h2>Highest Predicted Value</h2>
+    <h2>Highest Ranked Units, based on multi-regression output</h2>
+    <ul>
+      <li><a href="https://www.airbnb.com/rooms/27318677	" >Chrysi's apartment-Next to the old harbor, Chania</a></li>
+      <li><a href="https://www.airbnb.com/rooms/32823773" >"Arismari" Luxury and Family Apartment</a></li>
+      <li><a href="https://www.airbnb.com/rooms/17179684" >House next to the Museum</a></li>
+      <li><a href="https://www.airbnb.com/rooms/10479295" >SUNNY HOUSE FOR ALL SEASONS</a></li>
+      <li><a href="	https://www.airbnb.com/rooms/23100031" >Spacious 3-bedroom appartment, centrally located !</a></li>
+    </ul>
+    <p></p>
     <figure>
-      <img src="/img/airbnb_florence_best_score.png" srcset=""alt="airbnb-florence-best-score">
+      <img src="/img/airbnb_florence_top_5.png" srcset=""alt="airbnb-florence-top-5">
     </figure>
 
     
