--- a/html/airbnb/munich.html
+++ b/html/airbnb/munich.html
@@ -66,14 +66,32 @@
         <img src="/img/airbnb_munich_multiple_regression.png" srcset=""alt="airbnb-munich-multi-regression">
     </figure>
     <p></p>
+    
     <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
+    <ul>
+    <li><a href="https://www.airbnb.com/rooms/6087182" >Apartment in the center</a></li>
+      <li><a href="https://www.airbnb.com/rooms/15144006" >Top 3 rooms apartment, 2 baths, terrace, deer garden</a></li>
+      <li><a href="https://www.airbnb.com/rooms/8347442" >City Center 15min & Fully equipped</a></li>
+      <li><a href="https://www.airbnb.com/rooms/8129747" >Modern, Large, good located, sleep4</a></li>
+      <li><a href="https://www.airbnb.com/rooms/26296927" >3-Zi.-Whg. in Top Lage!</a></li>
+    </ul>
+    <p></p>
+    
     <figure>
-      <img src="/img/airbnb_munich_mispriced.png" srcset=""alt="airbnb-munich-mispriced">
+      <img src="/img/airbnb_munich_top_deal.png" srcset=""alt="airbnb-munich-top-deals">
     <p></p>
     </figure>
-    <h2>Highest Predicted Value</h2>
+    <h2>Highest Ranked Units, based on multi-regression output</h2>
+    <ul>
+      <li><a href="https://www.airbnb.com/rooms/14947959" >Beautiful Flat in old building in central Munich</a></li>
+      <li><a href="	https://www.airbnb.com/rooms/11710685	" >"Delightful, spacious, best location" </a></li>
+      <li><a href="	https://www.airbnb.com/rooms/22058550" >Italian flair in the middle of Munich</a></li>
+      <li><a href="https://www.airbnb.com/rooms/27603151" >Beautiful flat in Schwabing</a></li>
+      <li><a href="https://www.airbnb.com/rooms/25769867" >New luxury and cozy apartment with 70 sqm terrace</a></li>
+    </ul>
+    <p></p>
     <figure>
-      <img src="/img/airbnb_munich_best_score.png" srcset=""alt="airbnb-munich-best-score">
+      <img src="/img/airbnb_munich_top_5.png" srcset=""alt="airbnb-munich-top-5">
     </figure>
 
 
