--- a/html/airbnb/rome.html
+++ b/html/airbnb/rome.html
@@ -66,14 +66,37 @@
         <img src="/img/airbnb_rome_multiple_regression.png" srcset=""alt="airbnb-rome-multi-regression">
     </figure>
     <p></p>
-    <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
     <figure>
-      <img src="/img/airbnb_rome_mispriced.png" srcset=""alt="airbnb-rome-mispriced">
+      <img src="/img/airbnb_rome_neighborhood_boxplot.png" srcset=""alt="airbnb-rome-multi-regression">
+  </figure>
+    <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
+    <ul>
+      <li><a href="https://www.airbnb.com/rooms/32097316" >DolceLife</a></li>
+      <li><a href="https://www.airbnb.com/rooms/22013111" >NICE APARTMENT IN ROME “LE STANZE DI PAOLA”</a></li>
+      <li><a href="https://www.airbnb.com/rooms/39122616" >Emy's Tulip House</a></li>
+      <li><a href="https://www.airbnb.com/rooms/411167" >Liberty Penthouse of 1923 in Rome</a></li>
+      <li><a href="https://www.airbnb.com/rooms/11011761" >Charming apartment + private garden</a></li>
+    </ul>
+    <p></p>
+    
+    <figure>
+      <img src="/img/airbnb_rome_top_deals.png" srcset=""alt="airbnb-rome-top-deals">
     <p></p>
     </figure>
-    <h2>Highest Predicted Value</h2>
+    <h2>Highest Ranked Units, based on multi-regression output</h2>
+    <ul>
+      <li><a href="https://www.airbnb.com/rooms/32097316" >DolceLife</a></li>
+      <li><a href="https://www.airbnb.com/rooms/5036702" >SUN APARTMENT</a></li>
+      <li><a href="https://www.airbnb.com/rooms/24464233" >Campo de Fiori Double bedroom With balcony</a></li>
+      <li><a href="https://www.airbnb.com/rooms/14927534" >The Spanish Steps Condotti Luxury Apartment</a></li>
+      <li><a href="https://www.airbnb.com/rooms/7121143" >Cosy house in the heart of Rome</a></li>
+    </ul>
+    <p></p>
     <figure>
-      <img src="/img/airbnb_rome_best_score.png" srcset=""alt="airbnb-rome-best-score">
+      <img src="/img/airbnb_rome_top_rated_5_code.png" srcset=""alt="airbnb-rome-top-rated-code">
+    </figure>
+    <figure>
+      <img src="/img/airbnb_rome_top_rated_5.png" srcset=""alt="airbnb-rome-top-rated">
     </figure>
     
     <footer>
