--- a/html/airbnb/vienna.html
+++ b/html/airbnb/vienna.html
@@ -66,14 +66,34 @@
         <img src="/img/airbnb_vienna_multiple_regression.png" srcset=""alt="airbnb-vienna-multi-regression">
     </figure>
     <p></p>
-    <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
     <figure>
-      <img src="/img/airbnb_vienna_mispriced.png" srcset=""alt="airbnb-vienna-mispriced">
+      <img src="/img/vienna_neighborhood_boxplot.png" srcset=""alt="vienna-boxplot">
+    </figure>
+    <h2>Most Undervalued - biggest gap between Predicted and Actual Prices</h2>
+    <ul>
+      <li><a href="	https://www.airbnb.com/rooms/25038714" >Warm-hearted artist apartment close to center</a></li>
+      <li><a href="https://www.airbnb.com/rooms/16936862" >Beautiful Apartment - 10 Minutes from City Centre</a></li>
+      <li><a href="https://www.airbnb.com/rooms/23269598" >PREMIUM | CITY-CENTER SUITE</a></li>
+      <li><a href="https://www.airbnb.com/rooms/4610269	" >Modern 2room Apt. with balkony in Vienna center</a></li>
+      <li><a href="https://www.airbnb.com/rooms/23040120" >Modern & central apartment with private garden.</a></li>
+    </ul>
+    <p></p>
+    
+    <figure>
+      <img src="/img/airbnb_vienna_top_deal.png" srcset=""alt="airbnb-vienna-top-deals">
     <p></p>
     </figure>
-    <h2>Highest Predicted Value</h2>
+    <h2>Highest Ranked Units, based on multi-regression output</h2>
+    <ul>
+      <li><a href="https://www.airbnb.com/rooms/50748667" >Space Homes - City Center (Capsule 05)</a></li>
+      <li><a href="https://www.airbnb.com/rooms/33267439" >Vienna´s best view from the "Stefan ZWEIG" house</a></li>
+      <li><a href="https://www.airbnb.com/rooms/3235646" >Beautiful Guestroom near Belvedere</a></li>
+      <li><a href="https://www.airbnb.com/rooms/25583661" >Beautiful house with pool and view over Vienna</a></li>
+      <li><a href="https://www.airbnb.com/rooms/21458885" >Cozy nest in the heart of Vienna</a></li>
+    </ul>
+    <p></p>
     <figure>
-      <img src="/img/airbnb_vienna_best_score.png" srcset=""alt="airbnb-vienna-best-score">
+      <img src="/img/airbnb_vienna_top_5.png" srcset=""alt="airbnb-vienna-top-5">
     </figure>
 
 
